2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* properties.c: Help button for Shaun.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* global.h:
	* linux-proc.[ch]:
	* main.c:
	* diskload.c (added): Add diskload monitor. Not quite working properly
	  and there is no UI yet.

2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>

	* linux-proc.h:
	* linux-proc.c: (GetLoad), (GetMemory), (GetLoadAvg):
	Little cleanups.
	Replaced assert by g_return_if_fail. Closes #144156.

	(GetNet): No more hacks to get interface list : uses glibtop_get_netlist.
	(GetSwap): Fixed if there's no swap at all.

2005-01-09  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* main.c: Start g-s-m on single click. Fix for 113958.

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am: Remove -Wall, we shouldn't use this, plus it breaks
	  some crazy IBM AIX compiler. Current accepted behaviour is if users
	  want -Wall, they can add it to their CFLAGS, like -g.
	  Fixes bug #161996.

2004-12-20  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: Spurious line in translucency code.

2004-11-09  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: Support panel translucency.

2004-09-29  Davyd Madeley  <davyd@madeley.id.au>

	* linux-proc.c: Make network traffic show under NetBSD. Patch from
	  Douglas Brebner <bugzilla@fang.demon.co.uk>. Closes #153838.

2004-09-13  Shaun McCance  <shaunm@gnome.org>

	* docs/C/multiload-C.omf:
	* docs/C/multiload.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* main.c: (help_cb), (multiload_change_background_cb):
	Use correct API for help.

2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: (load_graph_unalloc), (load_graph_destroy),
	(load_graph_new):
	* properties.c: (add_color_selector): Merge fix for
	bug #148710 from stable.

2004-06-26  Dennis Smit  <ds@nerds-incorporated.org>

	* load-graph.c (load_graph_update):
