@@ -1,3 +1,12 @@
+2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* linux-proc.c: (get_netmax), (GetNet): Should fix #88654.
+
+	* main.c:
+	* properties.c: Marked static a bunch of functions.
+	
+	* global.h: Added missing prototype for diskload_applet_new.
+
 2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
 
 	* properties.c: Help button for Shaun.
